--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,5 +21,6 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push --force https://genaitiwari:$HF_TOKEN@huggingface.co/spaces/genaitiwari/agenticai main
+        run: git push --force https://vinojdaniel:$HF_TOKEN@huggingface.co/spaces/vinojdaniel/agentic main
+        
        
